[package]
name = "lx200-io"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { version = "7.1.3", default-features = false }
maybe-async = "0.2.10"
tokio = { version = "1.43.0", default-features = false, features = [
  "io-util",
], optional = true }
thiserror = "2.0.11"
serialport = { version = "4.7.0", optional = true }

[dev-dependencies]
proptest = "1.6.0"

[features]
default = []
tokio = ["dep:tokio"]
roms = []
io = ["dep:serialport"]
